--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      {% if title %}
       <title>{{ title }} - Microblog</title>
+      {% else %}
+      <title>Welcome to Microblog</title>
+      {% endif %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <h1>Hello, {{ user.username }}</h1>
+    {% for post in posts %}
+    <div>
+      <p>
+      {{ post.author.username }} says:
+        <b>
+          {{ post.body }}
+        </b>
+      </p>
+    </div>
+    {% endfor %}
   </body>
 </html>
